--- a/app/boards/arm/aarupad/aarupad_defconfig
+++ b/app/boards/arm/aarupad/aarupad_defconfig
@@ -29,7 +29,7 @@ CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
 CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
+#CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
 
 
 # Enable the rotary encoder
