update to zephyr 2.6

--- a/app/boards/arm/aarupad/aarupad_defconfig
+++ b/app/boards/arm/aarupad/aarupad_defconfig
@@ -28,8 +28,8 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_START=30
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=1
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 
-CONFIG_ZMK_SLEEP=y
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
+CONFIG_ZMK_SLEEP=n
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
 
 
 # Enable the rotary encoder
