--- a/app/boards/arm/aarupad/aarupad_defconfig
+++ b/app/boards/arm/aarupad/aarupad_defconfig
@@ -31,6 +31,11 @@ CONFIG_ZMK_RGB_UNDERGLOW_ON_START=y
 CONFIG_ZMK_SLEEP=n
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=10000
 
+CONFIG_I2C=y
+#CONFIG_MAX17055=y
+
+#CONFIG_ZMK_BATTERY_VOLTAGE_DIVIDER=n
+
 
 # Enable the rotary encoder
 # CONFIG_EC11=y
